fix accidental bug on mobile vs desktop nav

--- a/about.css
+++ b/about.css
@@ -130,6 +130,11 @@ h1.logo::before {
 }
 
 .navbar li {
+  display: inline-block;
+  padding: 0px 20px;
+}
+
+.mobileNavbar li {
   display: flex;
   justify-content: flex-start;
   align-items: center;
