--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
   text-decoration: none;
   border: none;
   outline: none;
-  scroll-behavior: smooth;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -113,6 +112,11 @@ h1.logo::before {
 }
 
 .navbar li {
+  display: inline-block;
+  padding: 0px 20px;
+}
+
+.mobileNavbar li {
   display: flex;
   justify-content: flex-start;
   align-items: center;
